# PrimeFactors-523

./: .gitignore  CMakeLists.txt  default.profraw  expected
src/: prime-factors.cpp
test/: prime-factors_test.cpp
